blocks/preview-modal.css
.modal_type_image_preview {
  padding: 0 16px;
}

.modal__image_container {
  position: relative;
}

.modal__image {
  max-width: 80vw;
  max-height: 80vh;
  width: 100%;
  object-fit: contain;
  display: block;
  border-radius: 8px;
}

.modal__close_type_preview {
  position: absolute;
  right: -52.5px;
  opacity: 1;
}

.modal__close_type_preview:hover {
  opacity: 40%;
}

.modal__caption {
  display: inline-block;
  padding: 4px 8px;
  border-radius: 8px;
  font-size: 20px;
  font-weight: 200;
  margin: 8px 0 0 0;
  background-color: #212121;
  color: white;
}

@media screen and (max-width: 630px) {
  .modal__close_type_preview {
    top: -48px;
    right: 0;
  }

  .modal__image {
    max-width: unset;
  }
}

